# MiniGridSFM30-V2

./: .gitignore  CITATION.cff  LICENSE  README.md  activate_project.sh  pyproject.toml  requirements-lock.txt  requirements.txt
data/: MANIFEST.md
docs/: architecture.md  experiments.md
minigridsfm30/: cycle_basis.py  dataset.py  graph_builder.py  losses.py  model.py  schema.py  training_utils.py
reports/: experiment_summary.md  stage13_full100_holdout_killgen_loads_5seed.md  stage13_preliminary_earlystop25_holdout_killgen_loads_5seed.md  stage13_topology_5seed.csv  stage13_topology_5seed.md  stage13_topology_5seed_per_seed.csv  stage13_topology_manifest.json  stage13_unseen_generator_5seed.md  stage13_unseen_generator_manifest.json  stage13_unseen_load_5seed.csv  stage13_unseen_load_5seed.md  stage13_unseen_load_5seed_per_seed.csv  stage13_unseen_load_manifest.json
scripts/: analyze_perturb_failures.py  analyze_raw_dataset.py  baseline_compare.py  baseline_split.py  check_topology_dataset.py  check_topology_outage_support.py  eval.py  eval_split.py  feasibility_baseline.py  generate_topology_outage_dataset.py  inspect_dataset.py  make_fewshot_mode_split_dataset.py  make_mode_split_dataset.py  make_unseen_generator_split.py  make_unseen_load_split.py  merge_raw_datasets.py  plot_metrics.py  preprocess_dataset.py  resolve_check_samples.py  run_stage13_multiseed.sh  run_stage13_multiseed_full100.sh  run_stage13_topology_5seed.sh  run_stage13_unseen_generator_5seed.sh  run_stage13_unseen_load_5seed.sh  sample_case30.py  sample_case30_killgen_mixed.py  summarize_runs.py  test_dataset.py  (+8 more)
(+5 files in other folders)
